--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.passpackfour.passgeneratorsuperman">
+    package="com.passpackfour.passgeneratorplants">
 
     <uses-permission android:name="android.permission.INTERNET"/>
 
@@ -13,10 +13,10 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.PassGeneratorSuperman"
+        android:theme="@style/Theme.PassGeneratorPlants"
         tools:targetApi="31">
         <activity
-            android:name="com.passpackfour.passgeneratorsuperman.SplashScreenActivity"
+            android:name="com.passpackfour.passgeneratorplants.SplashScreenActivity"
             android:screenOrientation="portrait"
             android:exported="true">
             <intent-filter>
@@ -26,7 +26,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.passpackfour.passgeneratorsuperman.MainActivity"
+            android:name="com.passpackfour.passgeneratorplants.MainActivity"
             android:exported="true"
             android:screenOrientation="portrait">
 
