--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ android {
     compileSdk 32
 
     defaultConfig {
-        applicationId "com.passpackfour.passgeneratorplants"
+        applicationId "com.passpackfive.passgeneratorcomputers"
         minSdk 26
         targetSdk 32
         versionCode 1
